app/src/pages/parts/hero_block_1/style.less
.rmbt-hero-block-1-full-width {
  margin-top: @height_top_row;
  background-color: @color_background_header;
  position: relative;

  &::after {
    content: '';
    position: absolute;
    .adaptive-prop(left, 70, 11);
    .adaptive-prop(right, 70, 11);

    top: @height_hero-block-1_top_row;
    height: 2px;
    background-color: #d5d5d5;
    border-radius: 300%;
  }

  &.hide-after {
    z-index: 5;
    &:after {
      display: none;
    }
  }

  &__bg {
    position: absolute;
    left: 0px;
    right: 0px;
    top: 0px;
    bottom: 0px;
    background-color: @color_background_header;

    &::after {
      content: '';
      position: absolute;
      left: 0px;
      right: 0px;
      top: 0px;
      bottom: 0px;
      background-color: rgba(3, 3, 3, 0.37);
    }
  }

  .rmbt-hero-block-1-top-row-full-width {
    margin-top: 0px;
    background: none;
    .rmbt-menu-horizontal {
      color: #d5d5d5;
    }
  }

  .rmbt-hero-block-1-top-row {
  }
}

.rmbt-hero-block-1 {
  position: relative;
  .adaptive-prop(padding-top, 50, 30);
  .adaptive-prop(padding-bottom, 50, 30);

  &__row {
    display: flex;
    column-gap: 25px;
    position: relative;

    .to(768px,{
      flex-wrap: wrap;
      row-gap: 30px;
      justify-content: center;
    });
  }

  &__col {
    .adaptive-prop(height, 370, 170);

    .to(768px,{
        height: 290px;
        padding-left: 10px;
        padding-right: 10px;
      });
  }
}
.rmbt-hero-block-1-col-right {
  flex-basis: 30%;
  position: relative;
  box-sizing: border-box;
  padding: 30px 20px 40px 20px;

  .adaptive-prop(padding-bottom, 40, 10);
  .adaptive-prop(padding-top, 30, -5);

  .to(768px,{
      order: 2;
      flex-basis: 60%;
      height: auto;
      padding-top: 10px;
      padding-bottom: 10px;
    });

  &__bg {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;

    &:after {
      content: '';
      position: absolute;
      left: 0;
      top: 0;
      width: 100%;
      height: 100%;
      background-color: @color_background_col;
      border-radius: 16px 0px 0px 16px;
      backdrop-filter: blur(4px);
      background-color: rgba(213, 213, 213, 0.15);
      // box-shadow: 0 0 1em rgba(0, 0, 0, 0.5);
      box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);

      .to(768px,{
        border-radius: 16px;
      });
    }
  }
}
.rmbt-hero-block-1-col-left {
  flex-grow: 1;
  position: relative;

  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  padding: 0px;

  .adaptive-prop(padding-left, 40, 10);
  .adaptive-prop(padding-right, 40, 10);


  .to(768px,{
      order: 1;
    });

  &__bg {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;

    &::before {
      content: '';
      position: absolute;
      left: 0;
      top: 0;
      width: 100%;
      height: 100%;

      border: 1px solid @color_border_col;
      border-radius: 0px 16px 16px 0px;
      background-color: rgba(213, 213, 213, 0.15);
      box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
      backdrop-filter: blur(4px);

      .to(768px,{
        border-radius: 16px 16px 16px 16px;
      });
    }
  }

  &__content {
    position: relative;
    width: 85%;

    .to(1090px,{
        width: 100%;
        .adaptive-prop(margin-top, 0, -40);
      });
      
      .to(844px,{
        margin-top: 20px;
        margin-bottom: 40px;
    });


    .to(768px,{
      margin-top: -35px
    });
  }

  &__title {
    position: relative;
    font-family: Overlock;
    .adaptive-prop(font-size, 49, 25);

    line-height: 45px;
    font-weight: 700;
    letter-spacing: 0em;
    color: #eaeaea;
    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.9);
    padding-left: 40px;
    box-sizing: border-box;

    .to(1090px,{
        text-align: center;
      });

    .to(768px,{
      .adaptive-prop(font-size, 90, 38);
      line-height:90%;
      margin-bottom: 15px;
      overflow: hidden;

      padding-left: 0px;
      min-height: 65px;

      
    });

    span {
      color: #f35200;
    }
  }
  &__subtitle {
    position: relative;
    font-family: Ubuntu;
    .adaptive-prop(font-size, 22, 12);

    line-height: 110%;
    font-weight: 200;
    color: #eaeaea;
    text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
    letter-spacing: 0em;
    text-transform: lowercase;
    width: 80%;
    .adaptive-prop(margin-top, 20, -2);

    .to(1090px,{
        width: 100%;
        text-align: center;
    });

    .to(768px,{
      .adaptive-prop(font-size, 40, 12);
      //  margin-bottom: 10px;
      });
  }
  &__slogan {
    position: relative;
    font-family: Ubuntu;
    .adaptive-prop(font-size, 22, 12);

    line-height: 100%;
    font-weight: 400;
    color: #fff;
    letter-spacing: 0em;
    text-transform: uppercase;
    text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
    text-align: end;
    margin-bottom: 5px;
    .adaptive-prop(margin-bottom, 5, -5);

    .to(1090px,{
        text-align: center;
      });

    .to(768px,{
      .adaptive-prop(font-size, 40, 12);
      margin-bottom: 9px;
      });
  }

  .controls-container {
    left: auto;
    right: 35px;
    bottom: 25px;

    .to(1024px,{
      right: auto;
      left: 50%;
      transform: translate(-50%, 0%);
      .adaptive-prop(bottom, 60, 0);
    });

    .to(768px,{
      .adaptive-prop(bottom, 60, 20);
    });

    .to(480px,{
        .rmbt-button-nav{
          height: 40px;
          line-height: 40px;
        }
    });

    .to(390px,{
      column-gap: 20px;
    });
  }
}

.rmbt-visible_burger,
.menu-header-navigation-container {
  row-gap: 50px;

  li a {
    &:after {
      content: '';

      position: absolute;
      left: 0px;
      bottom: -2px;
      height: 2px;
      box-shadow: 0px 0px 1px rgba(0, 0, 0, 1);
      background-color: #f35200cf;
      width: 0px;
    }
  }

  li:hover {
    & > a:after {
      width: 100%;
      transition: width 0.5s;
    }
  }

  .custom-logo-link {
    position: absolute;
    top: 30px;

    .custom-logo {
      width: 180px;
      .adaptive-prop(width, 400, 140);
      height: auto;

      .to(480px,{
      .adaptive-prop(width, 400, 180);
      });
    }
  }

  .to(768px,{
        &::after {
          content: '';
          position: absolute;
          .adaptive-prop(left, 70, 11);
          .adaptive-prop(right, 70, 11);
          .adaptive-prop(top, 160, 75);
          height: 2px;
          background-color: #d5d5d5;
          border-radius: 300%;
        }
    });

  .to(480px,{
      &::after {  
        .adaptive-prop(top, 130, 90);
      }
    });

  .rmbt-button-cta {
    width: 80%;
    min-width: 180px;
    margin: 0px auto 0 auto;
  }

  .rmbt-social-networks {
    svg {
      width: 45px;
      height: 45px;
    }

    .to(768px,{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
    });
  }
}

